--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -1,39 +1,39 @@
-add_executable(lpython compy.cpp)
-target_include_directories(lpython PRIVATE "tpl")
-target_link_libraries(lpython lpython_lib)
-if (LPYTHON_STATIC_BIN)
+add_executable(compy compy.cpp)
+target_include_directories(compy PRIVATE "tpl")
+target_link_libraries(compy compy_lib)
+if (COMPY_STATIC_BIN)
     if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         # Link statically on Linux with gcc or clang
         if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR
                 CMAKE_CXX_COMPILER_ID MATCHES Clang)
-            target_link_options(lpython PRIVATE -static)
+            target_link_options(compy PRIVATE -static)
         endif()
     endif()
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    target_link_options(lpython PRIVATE "LINKER:--export-dynamic")
+    target_link_options(compy PRIVATE "LINKER:--export-dynamic")
 endif()
 
 if (WITH_STACKTRACE AND APPLE AND CMAKE_CXX_COMPILER_ID MATCHES Clang)
     # On macOS we have to call dsymutil to create the dSYM bundle so that the
-    # stacktrace can find debugging information corresponding to the lpython
+    # stacktrace can find debugging information corresponding to the compy
     # binary
     add_custom_command(
-        TARGET lpython
+        TARGET compy
         POST_BUILD
-        COMMAND dsymutil lpython
+        COMMAND dsymutil compy
     )
     if (WITH_DWARFDUMP)
         add_custom_command(
-            TARGET lpython
+            TARGET compy
             POST_BUILD
-            COMMAND llvm-dwarfdump --debug-line lpython.dSYM > lpython.dSYM/raw.txt
+            COMMAND llvm-dwarfdump --debug-line compy.dSYM > compy.dSYM/raw.txt
         )
         add_custom_command(
-            TARGET lpython
+            TARGET compy
             POST_BUILD
-            COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/dwarf_convert.py lpython.dSYM/raw.txt lpython.dSYM/lines.txt lpython.dSYM/lines.dat
+            COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/dwarf_convert.py compy.dSYM/raw.txt compy.dSYM/lines.txt compy.dSYM/lines.dat
         )
     endif()
 endif()
@@ -41,19 +41,19 @@ endif()
 
 # Ensure "Release" is not appended to the path on Windows:
 # https://stackoverflow.com/a/56201564/479532
-set_target_properties(lpython PROPERTIES RUNTIME_OUTPUT_DIRECTORY $<0:>)
+set_target_properties(compy PROPERTIES RUNTIME_OUTPUT_DIRECTORY $<0:>)
 
-set_target_properties(lpython PROPERTIES
+set_target_properties(compy PROPERTIES
     INSTALL_RPATH_USE_LINK_PATH TRUE
 )
 
-install(TARGETS lpython
+install(TARGETS compy
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-    ARCHIVE DESTINATION share/lpython/lib
-    LIBRARY DESTINATION share/lpython/lib
+    ARCHIVE DESTINATION share/compy/lib
+    LIBRARY DESTINATION share/compy/lib
 )
 
-set_target_properties(lpython PROPERTIES
+set_target_properties(compy PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/$<0:>
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/$<0:>
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/$<0:>)
