--- a/src/compy/CMakeLists.txt
+++ b/src/compy/CMakeLists.txt
@@ -16,26 +16,26 @@ if (WITH_XEUS)
 #        fortran_kernel.cpp
     )
 endif()
-add_library(lpython_lib ${SRC})
-target_link_libraries(lpython_lib asr lpython_runtime_static ZLIB::ZLIB)
-target_include_directories(lpython_lib BEFORE PUBLIC ${lpython_SOURCE_DIR}/src)
-target_include_directories(lpython_lib BEFORE PUBLIC ${lpython_BINARY_DIR}/src)
+add_library(compy_lib ${SRC})
+target_link_libraries(compy_lib asr compy_runtime_static ZLIB::ZLIB)
+target_include_directories(compy_lib BEFORE PUBLIC ${compy_SOURCE_DIR}/src)
+target_include_directories(compy_lib BEFORE PUBLIC ${compy_BINARY_DIR}/src)
 if (WITH_XEUS)
-    target_link_libraries(lpython_lib xeus)
+    target_link_libraries(compy_lib xeus)
 endif()
 if (WITH_BFD)
-    target_link_libraries(lpython_lib p::bfd)
+    target_link_libraries(compy_lib p::bfd)
 endif()
 if (WITH_LINK)
-    target_link_libraries(lpython_lib p::link)
+    target_link_libraries(compy_lib p::link)
 endif()
 if (WITH_EXECINFO)
-    target_link_libraries(lpython_lib p::execinfo)
+    target_link_libraries(compy_lib p::execinfo)
 endif()
 if (WITH_LLVM)
-    target_link_libraries(lpython_lib p::llvm)
+    target_link_libraries(compy_lib p::llvm)
 endif()
-#install(TARGETS lpython_lib
+#install(TARGETS compy_lib
 #    RUNTIME DESTINATION bin
 #    ARCHIVE DESTINATION lib
 #    LIBRARY DESTINATION lib
