--- a/src/compy/CMakeLists.txt
+++ b/src/compy/CMakeLists.txt
@@ -2,7 +2,7 @@ set(SRC
     parser/tokenizer.cpp
     parser/parser.cpp
     parser/parser.tab.cc
-    # semantics/python_ast_to_asr.cpp
+    semantics/ast_to_asr.cpp
 
     # python_evaluator.cpp
 
