Implement --show-llvm option Compile to the ComPy code to binaries

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ version
 src/libasr/config.h
 src/libasr/asr.h
 src/compy/ast.h
-src/bin/compy
 inst/*
 src/compy/parser/tokenizer.cpp
 src/compy/parser/parser.tab.cc
@@ -39,3 +38,8 @@ __pycache__/
 ## Editor Files
 .vscode/
 .vs/
+
+## Build Files
+*/bin/compy
+*.o
+*.out
